# py-import-sorter

./: README.md  main.py  pyproject.toml
dummy/: helloworld.py
test-dir/: second_py_file.py
test-dir/user_account/: forms.py
tests/: test_main.py
tests/directory_with_py_files/: file1.txt  forms.py  helloworld.go  helloworld.js  target_file.py
tests/dummy/: helloworld.py
tests/edge_case_dir/: additional_edge_case.py  edge_case_file.py
tests/test_directory_2/: forms.py  test_file2.py
