[tool.poetry]
name = "py-sort-imports"
version = "0.1.0"
description = ""
authors = ["Jacob Short <thatmanjshort@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^21.11b1"
pandas = "^1.3.4"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]
black = {version = "^21.11b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
